--- a/requirements.txt
+++ b/requirements.txt
@@ -63,3 +63,8 @@ watchfiles==0.20.0
 wrapt==1.16.0
 wsproto==1.2.0
 zipp==3.20.1
+langchain==0.2.16
+langchain-core==0.2.38
+langchain-openai==0.1.23
+langchain-text-splitters==0.2.4
+langsmith==0.1.117
